fixed spacing bug

--- a/src/app/toolkit/plan/plan.component.css
+++ b/src/app/toolkit/plan/plan.component.css
@@ -39,3 +39,7 @@
   right: 8px;
   font-size: 1.2em;
 }
+
+search-cmp{
+  margin-top:5px;
+}
